# gpu-util-interference

./: CMakeLists.txt  chap3.md  chap4.md  mlwd_data(1).db  mlwd_results.json  pyproject.toml
gpu_util_bench_lib/: CMakeLists.txt
inter_sm/l2_cache/: output.md  plot_l2_cache.py  run_l2_experiment.sh
inter_sm/memory_bandwidth/: output.md  plot_membw.py  run_membw_experiment.sh
inter_sm/thread_block_scheduler/: output.md  plot_tb_scheduler.py
intra_sm/ipc/: output.md  plot_ipc.py  run_ipc_experiment.sh
intra_sm/l1_cache/: output.md  plot_l1_cache.py  run_l1_experiment.sh
intra_sm/pipelines/: output.md  plot_pipelines.py  run_pipeline_experiment.sh
mlwd/: build_complete_data.py  check_nvtx.py  check_vllm_profiler.py  clean_nsys_results.py  collect_all.py  config.py  estimate_ci.py  generate_latex_table.py  inspect_nsys_db.py  parse_traces.py  run_profiling.py  torch_profiler_collect.py  validate_data.py  visualize.py  vllm_profiler_collect.py  vllm_runner.py
mlwd/data/: mlwd_data.db
mlwd/docs/: nsys_guide.md
mlwd/modeling/: operator_model.py
mlwd/profiling/: kernel_classifier.py  ncu_collector.py  ncu_metrics.py  nsys_collector.py  nsys_parser.py
mlwd/scripts/: run_ncu_all.sh  run_nsys_all.sh
mlwd/sensitivity/: data_bak.md  mlwd_results_batch_1.json  mlwd_results_batch_4.json  sensitivity_collector.py  stress_kernels.py
mlwd/storage/: mlwd_db.py  mlwd_schema.py
mlwd_output/: mlwd_complete.json  mlwd_results_ci.json  mlwd_results_nsys.json  mlwd_results_nsys_clean.json
mm_pytorch/: CMakeLists.txt  python_interface.cu  run_llm_interference.py
